--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Enforce the format of the output of a language model"
 authors = ["Noam Gat <noamgat@gmail.com>"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://github.com/noamgat"
+homepage = "https://github.com/noamgat/lm-format-enforcer"
 repository = "https://github.com/noamgat/lm-format-enforcer"
 documentation = "https://github.com/noamgat/lm-format-enforcer"
 classifiers = [
