--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lm-format-enforcer"
-version = "0.0.dev7"
+version = "0.1.0"
 description = "Enforce the format of the output of a language model"
 authors = ["Noam Gat <noamgat@gmail.com>"]
 license = "MIT"
