--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "lm-format-enforcer"
-version = "0.1.1"
-description = "Enforce the format of the output of a language model"
+version = "0.1.3"
+description = "Enforce the output format (JSON Schema, Regex etc) of a language model"
 authors = ["Noam Gat <noamgat@gmail.com>"]
 license = "MIT"
 readme = "README.md"
