Refactor: Extracted analysis logic from transformers integration so it can be used in other inference engines

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ pytest = {version = "6.2.5", python = ">=3.8"}
 coverage = {version = "^7.3.1", python = ">=3.8", extras = ["toml"]}
 transformers = ">=4.28.1"
 torch = {version = "^2.1.0+cpu", source = "pytorch"}
+numpy = "^1.21.0"
 
 [tool.poetry.group.samples.dependencies]
 Flask = {version = "2.3.2", python = ">=3.8"}
